Small fix on check for element overlap
when filter on sample some element are null , so overlap need to return false
fix bad Indentation

small css fix

--- a/ui/src/components/SampleGrid/SampleGridTable.css
+++ b/ui/src/components/SampleGrid/SampleGridTable.css
@@ -148,7 +148,7 @@ button[disabled] {
 .samples-grid-table-item-tasks {
   max-width: 265px;
   height: 26px;
-  padding-left: 26px;
+  padding-left: 19px;
 }
 
 .samples-grid-table-item-tasks > .slick-list > .slick-track {
